# osom_tools

./: .gitignore  Cargo.toml  README.md
.github/workflows/: docs.yml  tests.yml
projects/osom_tools_dev/: Cargo.toml
projects/osom_tools_dev/src/: lib.rs
projects/osom_tools_dev/tests/: test_assert_eq_hex.rs  test_convert_to_fn.rs
projects/osom_tools_macros/: Cargo.toml
projects/osom_tools_macros/src/: hidden.rs  lib.rs  traits.rs
projects/osom_tools_macros/src/macros/: assert_eq_hex.rs  convert_to_fn.rs  mod.rs
projects/osom_tools_macros/src/models/: display_as_hex.rs  mod.rs
projects/osom_tools_macros/src/traits/: as_display_as_hex.rs  mod.rs
projects/osom_tools_runtime/: Cargo.toml
projects/osom_tools_runtime/src/: inline_vec.rs  lib.rs
projects/osom_tools_runtime/tests/: tests_inline_vec.rs
