[workspace]
members = [
    "projects/osom_tools_runtime",
    "projects/osom_tools_dev",
]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Rafal Szefler <rafael.szefler@gmail.com>"]
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/RafalSzefler/osom_tools"
categories = ["compilers"]

[workspace.dependencies]
# tests
rstest = "0.25"
