[package]
name = "osom_tools_runtime"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
categories.workspace = true
description = "Osom tools for osom projects, to be used at runtime."
keywords = ["osom", "tools"]

[lib]
crate-type = ["lib"]

[dev-dependencies]
rstest = { workspace = true }
